Basic HTML layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!-- Test -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="grid-container">
+        <nav class="sidebar">Sidebar
+                <ul class="nav1">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Tasks</a></li>
+                    <li><a href="#">Communities</a></li>
+                </ul>
+                <ul class="nav2">
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </nav>
+
+        <header class="header">Header
+            <div class="searchbar">searchbar</div>
+            <div class="greeting">Hi there</div>
+            <div class="notifications">Notifications</div>
+            <div class="buttons">Buttons</div>
+        </header>
+        <div class="main-content">Content</div>
+    </div>
+    
+</body>
+</html>
