Populate with dummy content. Start formatting sidebar

--- a/index.html
+++ b/index.html
@@ -8,29 +8,35 @@
 </head>
 <body>
     <div class="grid-container">
-        <nav class="sidebar">Sidebar
+        <nav class="sidebar">
+                <h1 class="sidebar-title"><img width="24px" height="24px" src="graphics/dashboard.svg" alt="Dashboard">Sidebar</h1>
                 <ul class="nav1">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Messages</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Tasks</a></li>
-                    <li><a href="#">Communities</a></li>
+                    <li><img width="24px" height="24px" src="graphics/home.svg" alt="Home"><a href="#">Home</a></li>
+                    <li><img width="24px" height="24px" src="graphics/profile.svg" alt="Profile"><a href="#">Profile</a></li>
+                    <li><img width="24px" height="24px" src="graphics/message.svg" alt="Messages"><a href="#">Messages</a></li>
+                    <li><img width="24px" height="24px" src="graphics/history.svg" alt="History"><a href="#">History</a></li>
+                    <li><img width="24px" height="24px" src="graphics/tasks.svg" alt="Tasks"><a href="#">Tasks</a></li>
+                    <li><img width="24px" height="24px" src="graphics/communities.svg" alt="Communities"><a href="#">Communities</a></li>
                 </ul>
                 <ul class="nav2">
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Privacy</a></li>
+                    <li><img width="24px" height="24px" src="graphics/settings.svg" alt="Settings"><a href="#">Settings</a></li>
+                    <li><img width="24px" height="24px" src="graphics/support.svg" alt="Support"><a href="#">Support</a></li>
+                    <li><img width="24px" height="24px" src="graphics/privacy.svg" alt="Privacy"><a href="#">Privacy</a></li>
                 </ul>
             </nav>
 
-        <header class="header">Header
-            <div class="searchbar">searchbar</div>
+        <header class="header">
+            <div class="searchbar"><button>Search</button><input type="search"></div>
             <div class="greeting">Hi there</div>
             <div class="notifications">Notifications</div>
             <div class="buttons">Buttons</div>
         </header>
-        <div class="main-content">Content</div>
+
+        <div class="main-content">
+            <div class="projects">Your Projects</div>
+            <div class="announcements">Announcements</div>
+            <div class="trending">Trending</div>
+        </div>
     </div>
     
 </body>
