Tweak Dashboard SVG sizing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="grid-container">
         <nav class="sidebar">
-                <h1 class="sidebar-title"><img width="24px" height="24px" src="graphics/dashboard.svg" alt="Dashboard">Sidebar</h1>
+                <h1 class="sidebar-title"><img width="40px" height="40px" src="graphics/dashboard.svg" alt="Dashboard">Dashboard</h1>
                 <ul class="nav1">
                     <li><img width="24px" height="24px" src="graphics/home.svg" alt="Home"><a href="#">Home</a></li>
                     <li><img width="24px" height="24px" src="graphics/profile.svg" alt="Profile"><a href="#">Profile</a></li>
