Searchbar and greeting formatting

--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
             </nav>
 
         <header class="header">
-            <div class="searchbar"><button>Search</button><input type="search"></div>
-            <div class="greeting">Hi there</div>
+            <div class="searchbar">
+                <div class="search-container">
+                    <input type="search">
+                    <div></div>
+                </div>
+            </div>
+            <div class="greeting">
+                <div class="circle">
+                    <img src="graphics/cat.png" height="50px" alt="This is a cat">
+                </div>
+                Hi there
+            </div>
             <div class="notifications">Notifications</div>
             <div class="buttons">Buttons</div>
         </header>
