Formatting changes, move searchbar out of container div. Move greeting out of container div

--- a/index.html
+++ b/index.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="grid-container">
         <nav class="sidebar">
-                <h1 class="sidebar-title"><img width="40px" height="40px" src="graphics/dashboard.svg" alt="Dashboard">Dashboard</h1>
-                <ul class="nav1">
-                    <li><img width="24px" height="24px" src="graphics/home.svg" alt="Home"><a href="#">Home</a></li>
-                    <li><img width="24px" height="24px" src="graphics/profile.svg" alt="Profile"><a href="#">Profile</a></li>
-                    <li><img width="24px" height="24px" src="graphics/message.svg" alt="Messages"><a href="#">Messages</a></li>
-                    <li><img width="24px" height="24px" src="graphics/history.svg" alt="History"><a href="#">History</a></li>
-                    <li><img width="24px" height="24px" src="graphics/tasks.svg" alt="Tasks"><a href="#">Tasks</a></li>
-                    <li><img width="24px" height="24px" src="graphics/communities.svg" alt="Communities"><a href="#">Communities</a></li>
-                </ul>
-                <ul class="nav2">
-                    <li><img width="24px" height="24px" src="graphics/settings.svg" alt="Settings"><a href="#">Settings</a></li>
-                    <li><img width="24px" height="24px" src="graphics/support.svg" alt="Support"><a href="#">Support</a></li>
-                    <li><img width="24px" height="24px" src="graphics/privacy.svg" alt="Privacy"><a href="#">Privacy</a></li>
-                </ul>
-            </nav>
+            <h1 class="sidebar-title"><img width="40px" height="40px" src="graphics/dashboard.svg"
+                    alt="Dashboard">Dashboard</h1>
+            <ul class="nav1">
+                <li><img width="24px" height="24px" src="graphics/home.svg" alt="Home"><a href="#">Home</a></li>
+                <li><img width="24px" height="24px" src="graphics/profile.svg" alt="Profile"><a href="#">Profile</a>
+                </li>
+                <li><img width="24px" height="24px" src="graphics/message.svg" alt="Messages"><a href="#">Messages</a>
+                </li>
+                <li><img width="24px" height="24px" src="graphics/history.svg" alt="History"><a href="#">History</a>
+                </li>
+                <li><img width="24px" height="24px" src="graphics/tasks.svg" alt="Tasks"><a href="#">Tasks</a></li>
+                <li><img width="24px" height="24px" src="graphics/communities.svg" alt="Communities"><a
+                        href="#">Communities</a></li>
+            </ul>
+            <ul class="nav2">
+                <li><img width="24px" height="24px" src="graphics/settings.svg" alt="Settings"><a href="#">Settings</a>
+                </li>
+                <li><img width="24px" height="24px" src="graphics/support.svg" alt="Support"><a href="#">Support</a>
+                </li>
+                <li><img width="24px" height="24px" src="graphics/privacy.svg" alt="Privacy"><a href="#">Privacy</a>
+                </li>
+            </ul>
+        </nav>
 
         <header class="header">
-            <div class="searchbar">
-                <div class="search-container">
+            <div class="header-left-panel">
+                <div class="searchbar">
                     <input type="search">
                     <div></div>
                 </div>
-            </div>
-            <div class="greeting">
                 <div class="circle">
                     <img src="graphics/cat.png" height="50px" alt="This is a cat">
                 </div>
-                Hi there
+                <div class="greeting">
+                    Hi there, <br> <strong>James Anderson (@jimboBaggins)</strong>
+                </div>
             </div>
             <div class="notifications">Notifications</div>
             <div class="buttons">Buttons</div>
@@ -48,6 +58,7 @@
             <div class="trending">Trending</div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
