Format header right panel html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,20 @@
                     Hi there, <br> <strong>James Anderson (@jimboBaggins)</strong>
                 </div>
             </div>
-            <div class="notifications">Notifications</div>
-            <div class="buttons">Buttons</div>
+            <div class="header-right-panel">
+                <div class="notifications">
+                    <img class="bell" width="32px" height="32px" src="graphics/bell.svg" alt="Notification graphic">
+                    <div class="circle-small">
+                        <img src="graphics/cat.png" height="35px" alt="This is a cat">
+                    </div>
+                    <div class="user-handle">jimboBaggins</div>
+                </div>
+                <div class="buttons">
+                    <button class="btn">New</button>
+                    <button class="btn">Upload</button>
+                    <button class="btn">Share</button>
+                </div>
+            </div>
         </header>
 
         <div class="main-content">
