Formatting main projects section

--- a/index.html
+++ b/index.html
@@ -65,9 +65,72 @@
         </header>
 
         <div class="main-content">
-            <div class="projects">Your Projects</div>
-            <div class="announcements">Announcements</div>
-            <div class="trending">Trending</div>
+            <div class="projects">
+                <h4>Your Projects</h4>
+                <div class="project-grid">
+                    <div class="card">
+                        <h4>Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis volutpat est a pellentesque.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Less Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id libero neque. Sed vestibulum urna sit amet eleifend ornare. Quisque.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>The Coolest Project</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate laoreet condimentum. Phasellus accumsan sapien vitae sem congue, ac bibendum.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Average App</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut odio finibus, vulputate nulla a, porttitor leo. Nulla facilisi. Etiam.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Money Maker</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas ultrices semper. Ut porta in dolor eu varius. Donec convallis.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h4>Middle Earth</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisi turpis, euismod et viverra venenatis, posuere et est. Nam gravida.</p>
+                        <div class="icons">
+                            <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
+                            <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
+                            <img width="32px" height="32px" src="graphics/source-fork.svg" alt="Fork">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="announcements">
+                <h4>Announcements</h4>
+            </div>
+            <div class="trending">
+                <h4>Trending</h4>
+            </div>
         </div>
     </div>
 
