--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="project-grid">
                     <div class="card">
                         <h4>Cool Project</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis volutpat est a pellentesque.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis volutpat est a pellentesque.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
@@ -79,7 +79,7 @@
                     </div>
                     <div class="card">
                         <h4>Less Cool Project</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id libero neque. Sed vestibulum urna sit amet eleifend ornare. Quisque.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id libero neque. Sed vestibulum urna sit amet eleifend ornare. Quisque.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
@@ -88,7 +88,7 @@
                     </div>
                     <div class="card">
                         <h4>The Coolest Project</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate laoreet condimentum. Phasellus accumsan sapien vitae sem congue, ac bibendum.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate laoreet condimentum. Phasellus accumsan sapien vitae sem congue, ac bibendum.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
@@ -97,7 +97,7 @@
                     </div>
                     <div class="card">
                         <h4>Average App</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut odio finibus, vulputate nulla a, porttitor leo. Nulla facilisi. Etiam.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut odio finibus, vulputate nulla a, porttitor leo. Nulla facilisi. Etiam.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
@@ -106,7 +106,7 @@
                     </div>
                     <div class="card">
                         <h4>Money Maker</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas ultrices semper. Ut porta in dolor eu varius. Donec convallis.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas ultrices semper. Ut porta in dolor eu varius. Donec convallis.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="card">
                         <h4>Middle Earth</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisi turpis, euismod et viverra venenatis, posuere et est. Nam gravida.</p>
+                        <p class="truncate-overflow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisi turpis, euismod et viverra venenatis, posuere et est. Nam gravida.</p>
                         <div class="icons">
                             <img width="32px" height="32px" src="graphics/star.svg" alt="Star">
                             <img width="32px" height="32px" src="graphics/eye.svg" alt="Eye">
