Add Trending posts and Announcements

--- a/index.html
+++ b/index.html
@@ -127,11 +127,50 @@
             </div>
             <div class="announcements">
                 <h4>Announcements</h4>
-                <div class="card"></div>
+                <div class="card">
+                    <strong>Site Maintenance</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <hr>
+                    <strong>Community Share Day</strong>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+                    <hr>
+                    <strong>Updated Privacy Policy</strong>
+                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                </div>
             </div>
             <div class="trending">
                 <h4>Trending</h4>
-                <div class="card"></div>
+                <div class="card">
+
+                    <div class="trending-row">
+                        <span class="circle-small"><img src="graphics/bear.png" alt="Bear" height="36px"></span>
+                        <div class="text">
+                            <strong>@jimbo</strong>
+                            <p>The Big Cheese</p>
+                        </div>
+                    </div>
+                    <div class="trending-row">
+                        <span class="circle-blue"><img src="graphics/sunshine.png" alt="Sunshine" height="24px"></span>
+                        <div class="text">
+                            <strong>@myLil1</strong>
+                            <p>Sunshine Bringer</p>
+                        </div>
+                    </div>
+                    <div class="trending-row">
+                        <span class="circle-grey"><img src="graphics/schneeb.png" alt="Schneeb" height="36px"></span>
+                        <div class="text">
+                            <strong>@Schneebo</strong>
+                            <p>World-class Schnoob</p>
+                        </div>
+                    </div>
+                    <div class="trending-row">
+                        <span class="circle-green"><img src="graphics/rabbit.png" alt="Rabbit" height="36px"></span>
+                        <div class="text">
+                            <strong>@MLapin</strong>
+                            <p>A Sophisticated Rabbit</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
